# public-pv-generation

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt
data/demo/: demo_elec_data.csv
data/pv_analysis/economic_data/: capital_costs_pv_2022.csv
data/pv_analysis/weather_data/: Weather_data_era5_2020.csv  Weather_data_pvgissarah2_2020.csv  Weather_data_pvlib_clearsky_2020.csv
docs/: index.md
docs/reference/models/: param.md  pvsystem.md
docs/reference/structure/: enums.md  index.md  schema.md
docs/reference/utils/: config.md  functions.md
notebooks/: Demo_notebook.ipynb
pv_generation/: __init__.py  main.py
pv_generation/models/: param.py  pvsystem.py
pv_generation/structure/: enums.py  schema.py
pv_generation/utils/: config.py  functions.py
scripts/: gen_ref_pages.py
site/: 404.html  index.html  objects.inv
site/reference/main/: index.html
site/reference/models/: index.html
site/reference/models/param/: index.html
site/reference/models/pvsystem/: index.html
site/reference/structure/: index.html
site/reference/structure/enums/: index.html
site/reference/structure/schema/: index.html
site/reference/utils/config/: index.html
site/reference/utils/functions/: index.html
site/search/: search_index.json
