[tool.poetry]
name = "pv-generation"
version = "0.1.0"
description = ""
authors = ["Empowering-Energy-Solutions <121625353+Empowering-Energy-Solutions@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
matplotlib = "^3.6.3"
folium = "^0.14.0"
e2slib = {git = "git@github.com:empowering-energy-solutions-ltd/e2slib.git", rev = "main"}
python-dotenv = "^1.0.0"
weather = {git = "git@github.com:empowering-energy-solutions-ltd/weather.git", rev = "main"}
pvlib = "0.10.0"
mkdocs-gen-files = "^0.5.0"
mkdocs = "^1.5.3"
mkdocstrings = "^0.24.1"
mkdocs-material = "^9.5.14"
mkdocs-mermaid2-plugin = "^1.1.1"
mkdocs-markdownextradata-plugin = "^0.2.5"
mkdocs-literate-nav = "^0.6.1"
mkdocs-section-index = "^0.3.8"
mkdocstrings-python = "^1.9.0"

[tool.poetry.group.dev.dependencies]
yapf = "^0.32.0"
pytest = "^7.2.1"
pylint = "^2.17.1"
hypothesis = "^6.76.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
